--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
+    "react-native-navigation": "^1.1.471",
+    "react-navigation": "^2.3.1",
     "ws": "^5.1.1"
   },
   "devDependencies": {
